styles.css
/* ... */
.contact {
  place-self: center;
  background-color: rgb(19, 145, 113);
  margin-bottom: 2rem;
  border-radius: 50px;
  margin-top: 4rem;
  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.6);
}

@media screen and (max-width: 800px) {
  .contact {
    width: 87vw;
  }
  .cv {
    height: 120vh;
  }
  .cv h1 {
    font-size: 2.2rem;
    position: relative;
    left: 180px;
    margin-top: 3rem;
  }

  .cv h2 {
    font-size: 1.5rem;
    position: relative;
    left: 215px;
  }

  .cv h3 {
    font-size: 1.2rem;
    position: relative;
    left: 190px;
    padding: 5px;
  }
  .date {
    margin-left: 2rem;
  }

  .cv p {
    font-size: 1rem;
    position: relative;
    left: 170px;
    place-self: revert;
  }
  .proficiencies {
    margin-left: -1rem;
  }

  .moi {
    width: 90vw;
    height: 250vh;
  }

  .moi img {
    margin-top: 5rem;
    width: 90%;
    margin-left: 2rem;
  }
  .moi p {
    padding-left: 35px;
  }

  .navn {
    margin-left: 3rem;
    margin-top: 1.5rem;
  }
  .about-me {
    display: grid;
    grid-template-columns: 1fr 1fr;
    width: 85vw;

    place-self: center;
    background-color: rgb(19, 145, 113);
    margin-top: 2rem;
    border-radius: 50px;
    box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.6);
  }
  .about-me h2 {
    font-size: 49px;
  }

  p {
    font-size: 17px;
    margin-top: -1.5rem;
  }

  .image-container {
    width: 100%; /* Make the image container take full width */
  }

  .portrait {
    width: 82%;
    margin-top: 2rem;
    margin-bottom: 1rem;
  }

  .portraitbw {
    position: absolute; /* Keep the overlay */
    right: 40px;
    bottom: 200px;
    width: 95%; /* Reduce size of the top image for mobile */
    transition: opacity 0.3s ease; /* Smooth transition */
  }

  .icons hr {
    position: relative;
    top: 100px;
    height: 1px;
    background-color: antiquewhite;
    width: 400%;
    margin-left: -10rem;
  }
  .icons {
    grid-template-columns: 1fr 1fr 1fr 1fr;
    display: grid;
    background-color: rgb(19, 145, 113);
    height: 40vh;
    width: 85vw;
    margin-left: 2.5rem;
    margin-top: 1.5rem;
    border-radius: 50px;
  }
  .container {
    margin: 50px;
    display: grid;
    grid-template-columns: 1fr;
    height: 50vh;
    overflow-y: hidden;
    overflow-x: hidden;
    padding: 20px;
    transition: padding-left 0.3s ease, overflow 0.3s ease;
  }
  .container:hover {
    overflow-x: hidden;
    scrollbar-color: rgb(14, 107, 84) antiquewhite;
    scrollbar-width: thin;
    overflow-y: auto;
    scroll-behavior: smooth;
  }
  .container img {
    margin-left: 2.5rem;
  }
  .container p {
    margin-left: 1.5rem;
  }
  .container h3 {
    place-self: center;
  }
  .adobe {
    margin-top: 0.3rem;
  }

  .html {
    width: 110%;
    grid-column: 2 / 3;
    position: relative;
    right: 65px;
    top: 15px;
  }
  .css {
    width: 110%;
    grid-column: 3 / 4;
    position: relative;
    right: 60px;
    top: 15px;
  }
  .js {
    width: 180%;
    grid-column: 4 / 5;
    position: relative;
    right: 100px;
    bottom: 2rem;
  }
  .portfolio {
    width: 85vw;
    max-height: 80vh;
  }

  .menu {
    display: none;
    flex-direction: column;
    position: absolute;
    top: 60px;
    left: 0;
    width: 100%;
    background-color: rgba(19, 145, 113, 0.9);
    z-index: 100;
  }
  .burger {
    display: block;
    margin-right: 2rem;
  }
  .burger.active .line:nth-child(1) {
    transform: rotate(45deg) translate(5px, 5px);
    transition: 0.2s linear;
  }

  .burger.active .line:nth-child(2) {
    opacity: 0;
    transition: 0.15s linear;
  }

  .burger.active .line:nth-child(3) {
    transform: rotate(-45deg) translate(5px, -5px);
    transition: 0.2s linear;
  }

  nav.active .menu {
    display: flex;
    background-color: rgb(19, 145, 113, 0.7);

    top: 200px;
    left: 0;
    width: 100%;
    padding: 20px 0;
    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2);
  }

  nav.active .menu li {
    margin: 10px 20px;
    margin-left: 30rem;
  }

  nav.active .menu a {
    font-size: 25px;
    text-transform: uppercase;
  }

  .about-me,
  .portfolio,
  .icons,
  .contact,
  .moi,
  .footer .footer-content {
    transition: transform 0.3s ease;
  }

  .about-me.active,
  .portfolio.active,
  .icons.active,
  .contact.active,
  .moi.active,
  .footer .active,
  .footer-content.active {
    transform: translateY(230px);
  }

  .logo {
    left: 230px;
    top: 20px;
    width: 50%;
  }

  html {
    background-size: 200%;
  }
  .footer-social ul li {
    position: relative;
    left: 210px;
  }
}
@media screen and (max-width: 600px) {
  nav.active .menu li {
    margin-left: 25rem;
  }
  .adobe {
    width: 36%;
    margin-left: 0.5rem;
    margin-top: -0.1rem;
  }

  .html {
    width: 120%;
    right: 95px;
  }
  .css {
    width: 120%;
    right: 85px;
    top: 15px;
  }
  .js {
    width: 200%;
    top: -26px;
    right: 115px;
  }
  .icons hr {
    width: 480%;
  }
  nav.active .menu {
    top: 150px;
  }

  nav.active .menu li {
    margin: 10px 20px;
    margin-left: 23rem;
  }

  .portrait {
    margin-top: 1rem;
    margin-bottom: 1rem;
  }

  .portraitbw {
    left: -25px;
    bottom: 350px;
    width: 100%; /* Reduce size of the top image for mobile */
  }
  p {
    font-size: 15px;
  }
  .about-me h2 {
    font-size: 40px;
  }

  .icons {
    margin-left: 2rem;
  }
  .footer-social ul li {
    position: relative;
    left: 140px;
  }
  .logo {
    margin-left: -1rem;
  }
  .moi h2 {
    font-size: 1.5rem;
  }
  .moi p {
    font-size: 0.7rem;
  }
  .moi img {
    margin-top: 8rem;
  }
  .cv h1 {
    font-size: 1.7rem;
    left: 130px;
  }

  .cv h2 {
    font-size: 1.3rem;
    left: 140px;
  }

  .cv h3 {
    font-size: 0.8rem;
    left: 155px;
  }
  .date {
    margin-left: 1.5rem;
  }

  .cv p {
    font-size: 0.9rem;
    left: 140px;
  }
}

